# school-agent

./: .env.example  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-structure.txt  task-10-markdown.txt  task-11-page.txt  task-12-alltests.txt  task-2-import.txt  task-2-structure.txt  task-4-docs.txt  task-7-pytest.txt  task-7-sse.txt  task-7-validation.txt  task-8-hook.txt
.sisyphus/notepads/school-agent-chat/: decisions.md  issues.md  learnings.md
.sisyphus/plans/: school-agent-chat.md
backend/: .env.example  AGENTS.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: admin.py  chat.py
backend/app/core/: settings.py
backend/app/graph/: graph.py
backend/app/rag/: __init__.py  chroma_manager.py  embeddings.py
backend/app/schemas/: admin.py  chat.py
backend/app/services/: chat_service.py  queue_service.py  temperature_monitor.py
backend/tests/: conftest.py  test_admin_api.py  test_admin_schemas.py  test_admin_temperature.py  test_chat_api.py  test_chat_service.py  test_chat_service_rag.py  test_chroma_manager.py  test_embeddings.py  test_graph.py  test_queue_service.py  test_rag_graph.py  test_schemas.py  test_settings.py  test_temperature_monitor.py
docs/: api.md
docs/superpowers/plans/: 2026-05-21-retrieval-scoring-compression.md  2026-05-25-kb-retrieval-options.md  2026-05-25-retrieval-display-refinement.md
docs/superpowers/specs/: 2026-05-19-rag-admin-design.md  (+4 more)
frontend/: AGENTS.md  next.config.ts  package.json  pnpm-lock.yaml
(+27 files in other folders)
